--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@emailjs/browser": "^4.4.1",
+    "@ngx-translate/core": "^16.0.4",
     "@tailwindcss/postcss": "^4.1.8",
     "postcss": "^8.5.4",
     "rxjs": "~7.8.0",
