--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@colsen1991/ngx-translate-extract-marker": "^3.0.1",
     "@emailjs/browser": "^4.4.1",
     "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@tailwindcss/postcss": "^4.1.8",
     "postcss": "^8.5.4",
     "rxjs": "~7.8.0",
