--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.2.0",
     "@colsen1991/ngx-translate-extract-marker": "^3.0.1",
     "@emailjs/browser": "^4.4.1",
+    "@ngrx/signals": "^19.2.1",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "@tailwindcss/postcss": "^4.1.8",
