update: projects responsive design

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -7,7 +7,7 @@
     "skills": ["Java", "Spring Boot", "Angular"],
     "lang": {
       "description": {
-        "en": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ex architecto perferendis eveniet id. Accusamus quod repellat deleniti adipisci asperiores explicabo enim, quae magnam sed nisi sunt dolorem suscipit quasi.",
+        "en": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ex architecto perferendis eveniet id.",
         "es": ""
       }
     },
