--- a/public/data/projects/book-now.json
+++ b/public/data/projects/book-now.json
@@ -4,9 +4,11 @@
   "category": "Full-Stack",
   "skills": ["Java", "Spring Boot", "Angular", "NgRx"],
   "lang": {
-    "description": {
-      "en": "Developing a web-based application that allows customers to schedule appointments with providers and use their services, post a review and automate a ranking of the bests providers.",
-      "es": ""
+    "en": {
+      "description": "Developing a web-based application that allows customers to schedule appointments with providers and use their services, post a review and automate a ranking of the bests providers."
+    },
+    "es": {
+      "description": "Developing a web-based application that allows customers to schedule appointments with providers and use their services, post a review and automate a ranking of the bests providers."
     }
   },
   "sourceCode": "https://github.com/AlbenBustamante/book-now",
