--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "book-now",
-    "thumbnail": "https://images.unsplash.com/photo-1586672806791-3a67d24186c0?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y292ZXIlMjBhcnR8ZW58MHx8MHx8fDA%3D",
+    "thumbnail": "book-now-1.jpeg",
     "title": "BookNow",
     "category": "Full-Stack",
     "skills": ["Java", "Spring Boot", "Angular", "NgRx"],
@@ -16,7 +16,7 @@
   },
   {
     "id": "fin-manage",
-    "thumbnail": "https://images.unsplash.com/photo-1586672806791-3a67d24186c0?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y292ZXIlMjBhcnR8ZW58MHx8MHx8fDA%3D",
+    "thumbnail": null,
     "title": "Fin Manage",
     "category": "Mobile",
     "skills": ["Dart", "Firestore", "Flutter", "BLoC Flutter"],
@@ -31,7 +31,7 @@
   },
   {
     "id": "text-printer",
-    "thumbnail": "https://images.unsplash.com/photo-1586672806791-3a67d24186c0?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y292ZXIlMjBhcnR8ZW58MHx8MHx8fDA%3D",
+    "thumbnail": "text-printer-1.jpeg",
     "title": "Text Printer",
     "category": "Front-End",
     "skills": ["TypeScript", "Angular", "Tailwind CSS"],
@@ -46,7 +46,7 @@
   },
   {
     "id": "cop-calculator",
-    "thumbnail": "https://images.unsplash.com/photo-1586672806791-3a67d24186c0?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y292ZXIlMjBhcnR8ZW58MHx8MHx8fDA%3D",
+    "thumbnail": null,
     "title": "COP Calculator",
     "category": "Front-End",
     "skills": ["TypeScript", "Angular", "Tailwind CSS"],
@@ -61,7 +61,7 @@
   },
   {
     "id": "fun-virtual-reading-api",
-    "thumbnail": "https://images.unsplash.com/photo-1586672806791-3a67d24186c0?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y292ZXIlMjBhcnR8ZW58MHx8MHx8fDA%3D",
+    "thumbnail": null,
     "title": "Fun Virtual Reading API",
     "category": "Back-End",
     "skills": ["Java", "Spring Boot", "PostgreSQL", "JWT"],
@@ -76,7 +76,7 @@
   },
   {
     "id": "to-do-list-api",
-    "thumbnail": "https://images.unsplash.com/photo-1586672806791-3a67d24186c0?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y292ZXIlMjBhcnR8ZW58MHx8MHx8fDA%3D",
+    "thumbnail": null,
     "title": "ToDo List API",
     "category": "Back-End",
     "skills": ["Java", "Spring Boot", "PostgreSQL", "JWT"],
@@ -91,7 +91,7 @@
   },
   {
     "id": "microblogging",
-    "thumbnail": "https://images.unsplash.com/photo-1586672806791-3a67d24186c0?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y292ZXIlMjBhcnR8ZW58MHx8MHx8fDA%3D",
+    "thumbnail": null,
     "title": "Microblogging",
     "category": "Desktop",
     "skills": ["Java", "JDBC", "MySQL", "Swing"],
