--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -11,7 +11,7 @@
         "es": ""
       }
     },
-    "featured": true,
+    "section": "FEATURED",
     "status": "IN_PROGRESS"
   },
   {
@@ -26,7 +26,7 @@
         "es": ""
       }
     },
-    "featured": true,
+    "section": "FEATURED",
     "status": "COMPLETED"
   },
   {
@@ -41,7 +41,7 @@
         "es": ""
       }
     },
-    "featured": false,
+    "section": "SMALL",
     "status": "COMPLETED"
   },
   {
@@ -56,7 +56,7 @@
         "es": ""
       }
     },
-    "featured": false,
+    "section": "SMALL",
     "status": "COMPLETED"
   },
   {
@@ -71,7 +71,7 @@
         "es": ""
       }
     },
-    "featured": true,
+    "section": "FEATURED",
     "status": "COMPLETED"
   },
   {
@@ -86,7 +86,7 @@
         "es": ""
       }
     },
-    "featured": false,
+    "section": "SMALL",
     "status": "ONLINE"
   },
   {
@@ -101,7 +101,7 @@
         "es": ""
       }
     },
-    "featured": false,
+    "section": "SMALL",
     "status": "ONLINE"
   }
 ]
